--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,64 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #f4f4f4;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.container {
+  width: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+@media(min-width: 992px) {
+  .container {
+    width: 50%;
+    margin: 0 auto;
+    overflow: hidden;
+  }
+}
+
+.container form {
+  margin: 2em;
+  padding: 2em;
+  box-shadow: 3px 3px 15px 0 #dadada;
+}
+
+@media(min-width: 992px) {
+  .container form {
+    margin: 5em;
+    padding: 4em;
+    box-shadow: 3px 3px 15px 0 #dadada;
+  }
+}
+
+.profile-container {
+  margin: 2em;
+  padding: 2em;
+  box-shadow: 3px 3px 15px 0 #dadada;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.user-snippet {
+  background: #981d9a;
+  padding: 40px;
+  width: 150px;
+  height: 150px;
+  margin: 50px;
+  border-radius: 75px;
+}
+
+.user-snippet h1 {
+  color: #ffffff;
+  text-align: center;
+  padding-top: 16px;
 }
